feature(interactivity): more interactivity with ui (#2)
Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>